Closed Bug 642405 Opened 14 years ago Closed 14 years ago

TI: Assertion failure: Call site vanished., at ./methodjit/Compiler.cpp:2467

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Unassigned)

References

Details

(Keywords: assertion, testcase, Whiteboard: fixed-in-jaegermonkey)

The following test case (run with -n -a -m) asserts on TI tip (tested on 64 bit): function startTest() {}; try { } catch(ex) { actual = ex + ''; } var actual = 'no error'; var prefValue; DESCRIPTION = "var class = true"; EXPECTED = "error"; actual(EXPECTED[prefValue], DESCRIPTION[prefValue], startTest[prefValue]);
Counterpart to bug 641535, add recompilation rejoin points for GETELEM/CALLELEM. http://hg.mozilla.org/projects/jaegermonkey/rev/e65266e60e1f
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
A testcase for this bug was automatically identified at js/src/jit-test/tests/jaeger/recompile/bug642405.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.