[INFER] Add recompilation rejoin points for GETELEM/CALLELEM, bug 642405.